Bug 266603 - Copy-pasted event in month view lose appointment time
Summary: Copy-pasted event in month view lose appointment time
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
: 293038 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-02-18 14:33 UTC by Fest
Modified: 2012-11-19 11:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fest 2011-02-18 14:33:02 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux



Reproducible: Always

Steps to Reproduce:
1. Create event.
2. Fill event entry's, including appointment time.
3. Right mouse click - copy and paste on another date.

Actual Results:  
Copied event loose appointment time. (time set on whole day)

Expected Results:  
Copied event save appointment time.
Comment 1 Sergio Martins 2011-02-18 14:41:36 UTC
Working on the development version.
Comment 2 Christian Reiner 2011-10-12 20:53:42 UTC
Same here, using kde-4.7.2 and three different calendar resources. It appears to be a general issue, not limited to a certain akonadi resource. 

In addition to removing the time from the created entry even the date of the created entry gets set to a wrong day when you copy an entry in the week view: 
You copy an entry from a few days ahead to another calendar and it will be created for today. Or maybe that is the first day in the week view, haven't tested that, sorry.
Comment 3 Christophe Marin 2012-02-06 18:38:31 UTC
*** Bug 293038 has been marked as a duplicate of this bug. ***
Comment 4 Christophe Marin 2012-02-06 18:40:18 UTC
from bug 293038

When copying events in Month view to other day, event time is reset to whole
day instead of original event's time.

Reproducible: Always

Steps to Reproduce:
Cerate a new event lasting i.e. from 12:00 to 13:00
Copy event
Paste into other day
Open event details

Actual Results:  
Only event description is copied. Time is reset to whole day.

Expected Results:  
Pasted event should have the same time i.e. from 12:00 to 13:00
Comment 5 Christophe Marin 2012-02-06 18:41:06 UTC
Valid in master with the steps mentioned in comment #4

- Create an event, including time
- Switch to month view
- Copy paste the event
Comment 6 Fest 2012-11-18 00:56:46 UTC
Still exist in KDE 4.9.3
Comment 7 Sergio Martins 2012-11-19 11:53:15 UTC
Git commit 2405b71fcad39c4df1262765fe8b6b7b3deced90 by Sergio Martins.
Committed on 19/11/2012 at 04:02.
Pushed by smartins into branch 'master'.

korganizer: Preserve original time when pasting.

Unless the user explicitly selects a time.

Do not backport, needs new kcalutils api.

M  +4    -1    korganizer/calendarview.cpp

http://commits.kde.org/kdepim/2405b71fcad39c4df1262765fe8b6b7b3deced90