korganizer: Preserve original time when pasting.

Unless the user explicitly selects a time.

Do not backport, needs new kcalutils api.

BUG: 266603